--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1053,7 +1053,7 @@
   "block.minecraft.light_weighted_pressure_plate": "Light Weighted Pressure Plate",
   "block.minecraft.heavy_weighted_pressure_plate": "Heavy Weighted Pressure Plate",
   "block.minecraft.iron_door": "Iron Door",
-  "block.minecraft.redstone_ore": "Redstone Ore",
+  "block.minecraft.redstone_ore": "Ruby Ore",
   "block.minecraft.redstone_torch": "Redstone Torch",
   "block.minecraft.redstone_wall_torch": "Redstone Wall Torch",
   "block.minecraft.stone_button": "Stone Button",
@@ -1142,8 +1142,8 @@
   "block.minecraft.green_wool": "Green Wool",
   "block.minecraft.red_wool": "Red Wool",
   "block.minecraft.black_wool": "Black Wool",
-  "block.minecraft.lapis_ore": "Lapis Lazuli Ore",
-  "block.minecraft.lapis_block": "Lapis Lazuli Block",
+  "block.minecraft.lapis_ore": "Sapphire Ore",
+  "block.minecraft.lapis_block": "Block of Sapphire",
   "block.minecraft.dispenser": "Dispenser",
   "block.minecraft.dropper": "Dropper",
   "block.minecraft.note_block": "Note Block",
@@ -1246,7 +1246,7 @@
   "block.minecraft.ender_chest": "Ender Chest",
   "block.minecraft.emerald_ore": "Emerald Ore",
   "block.minecraft.emerald_block": "Block of Emerald",
-  "block.minecraft.redstone_block": "Block of Redstone",
+  "block.minecraft.redstone_block": "Block of Ruby",
   "block.minecraft.tripwire": "Tripwire",
   "block.minecraft.tripwire_hook": "Tripwire Hook",
   "block.minecraft.command_block": "Command Block",
@@ -1313,11 +1313,11 @@
   "block.minecraft.gray_glazed_terracotta": "Gray Glazed Terracotta",
   "block.minecraft.light_gray_glazed_terracotta": "Arch Angel",
   "block.minecraft.cyan_glazed_terracotta": "Cyan Glazed Terracotta",
-  "block.minecraft.purple_glazed_terracotta": "Amethyst Ore",
-  "block.minecraft.blue_glazed_terracotta": "Sapphire Ore",
+  "block.minecraft.purple_glazed_terracotta": "Purple Glazed Terracotta",
+  "block.minecraft.blue_glazed_terracotta": "Blue Glazed Terracotta",
   "block.minecraft.brown_glazed_terracotta": "Brown Glazed Terracotta",
   "block.minecraft.green_glazed_terracotta": "Jungle",
-  "block.minecraft.red_glazed_terracotta": "Ruby Ore",
+  "block.minecraft.red_glazed_terracotta": "Red Glazed Terracotta",
   "block.minecraft.black_glazed_terracotta": "Black Glazed Terracotta",
   "block.minecraft.black_concrete": "Black Concrete",
   "block.minecraft.red_concrete": "Red Concrete",
@@ -1641,7 +1641,7 @@
   "item.minecraft.tropical_fish_bucket": "Bucket of Tropical Fish",
   "item.minecraft.minecart": "Minecart",
   "item.minecraft.saddle": "Saddle",
-  "item.minecraft.redstone": "Redstone Dust",
+  "item.minecraft.redstone": "Ruby",
   "item.minecraft.snowball": "Snowball",
   "item.minecraft.oak_boat": "Oak Boat",
   "item.minecraft.spruce_boat": "Spruce Boat",
@@ -1703,7 +1703,7 @@
   "item.minecraft.red_dye": "Red Dye",
   "item.minecraft.green_dye": "Green Dye",
   "item.minecraft.cocoa_beans": "Cocoa Beans",
-  "item.minecraft.lapis_lazuli": "Lapis Lazuli",
+  "item.minecraft.lapis_lazuli": "Sapphire",
   "item.minecraft.purple_dye": "Purple Dye",
   "item.minecraft.cyan_dye": "Cyan Dye",
   "item.minecraft.light_gray_dye": "Light Gray Dye",
