--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1313,7 +1313,7 @@
   "block.minecraft.gray_glazed_terracotta": "Gray Glazed Terracotta",
   "block.minecraft.light_gray_glazed_terracotta": "Arch Angel",
   "block.minecraft.cyan_glazed_terracotta": "Cyan Glazed Terracotta",
-  "block.minecraft.purple_glazed_terracotta": "Purple Glazed Terracotta",
+  "block.minecraft.purple_glazed_terracotta": "Amethyst",
   "block.minecraft.blue_glazed_terracotta": "Blue Glazed Terracotta",
   "block.minecraft.brown_glazed_terracotta": "Brown Glazed Terracotta",
   "block.minecraft.green_glazed_terracotta": "Jungle",
